# FlowM

./: .gitignore  FlowM.md  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: architecture.md  freedraw-and-extensions.md  structure-schema.md  structured-refine.md
scripts/: copy-excalidraw-fonts.mjs
src/: index.css  runtime.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_control.rs  lib.rs  main.rs  mcp.rs
src/agentControl/: agentControlProcess.ts  claudeControl.ts  claudeControlProtocol.test.ts  claudeControlProtocol.ts  codexAppServer.ts  codexAppServerProtocol.test.ts  codexAppServerProtocol.ts  diagnostics.test.ts  diagnostics.ts  index.ts  types.ts
src/app/: ActivityBar.tsx  App.tsx  Resizer.tsx  app.css  uiText.ts
src/canvas/: Canvas.tsx  autoLayout.test.ts  autoLayout.ts  bindingGeometry.test.ts  bindingGeometry.ts  excalidrawPort.ts  index.ts  layout.test.ts  layout.ts  layoutPasses.test.ts  layoutPasses.ts  tldrawPort.ts
src/chat/: ActivityCard.test.tsx  ActivityCard.tsx  Chat.test.ts  Chat.tsx  QuestionCard.tsx  activityReducer.test.ts  activityReducer.ts  activityRows.test.ts  activityRows.ts  index.ts  messageGrouping.ts  types.ts
src/engine/: ClaudePanel.tsx  canvasEngine.test.ts  canvasEngine.ts  chatEngine.ts  claudeAdapter.test.ts  claudeAdapter.ts  claudeCode.ts  claudeEngine.ts  claudeStream.test.ts  claudeStream.ts  codexCli.ts  codexEngine.ts  codexStream.test.ts  codexStream.ts  diagram.test.ts  diagram.ts  diagramLayout.test.ts  diagramLayout.ts  index.ts  mcpCanvas.test.ts  mcpCanvas.ts  prompt.test.ts  prompt.ts
src/llm/: adapter.ts  canvasPrompt.ts  claude.ts  claudeAdapter.test.ts  claudeAdapter.ts  codexAdapter.test.ts  codexAdapter.ts  conversation.ts  index.ts  poe.ts  questions.test.ts  (+3 more)
(+21 files in other folders)
