[package]
name = "flowm"
version = "0.0.0"
description = "FlowM desktop shell"
edition = "2021"

# The library target lets Tauri's mobile/desktop codegen share one entry point.
[lib]
name = "flowm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# json feature pulls in serde_json wiring; default-tls uses the OS TLS stack
# (SChannel on Windows), so no OpenSSL/cross-compile pain.
reqwest = { version = "0.12", features = ["json"] }
