[package]
name = "flowm"
version = "0.0.0"
description = "FlowM desktop shell"
edition = "2021"

# The library target lets Tauri's mobile/desktop codegen share one entry point.
[lib]
name = "flowm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Native folder picker for "选择文件夹" — must run on the OS main thread (which the plugin
# handles); we call it from a Rust command so no JS plugin package / capability is needed.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# json feature pulls in serde_json wiring; default-tls uses the OS TLS stack
# (SChannel on Windows), so no OpenSSL/cross-compile pain.
reqwest = { version = "0.12", features = ["json"] }
# Spawn the local `claude` CLI and stream its stdout/stderr (claude_run command).
tokio = { version = "1", features = ["process", "io-util", "rt", "sync"] }
# Decode the canvas PNG data URL before writing design.png (write_design command).
base64 = "0.22"
